[package]
name = "rpg-program"
version = "0.1.0"
description = "On-chain RPG with game_game mechanics and ponzimon randomness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rpg_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

